[package]
name = "cargo-fortanix"
version = "0.0.2"
authors = ["Steve <steven@skone.net>"]
repository = "https://github.com/skone/cargo-fortanix"
description = "A cargo subcommand to build binary targeting the fortanix platform"
readme = "README.md"
license = "MIT"

[[bin]]
name = "cargo-fortanix"

[dependencies]
clap = "2.23.3"
