[package]
name = "cargo-docker-builder"
version = "0.0.3"
authors = ["Steve <steven@skone.net>"]
repository = "https://github.com/skone/cargo-docker-build"
description = "A cargo subcommand to build rust using docker"
readme = "README.md"
license = "MIT"

[[bin]]
name = "cargo-docker-builder"

[dependencies]
clap = "2.23.3"
