[package]
name = "cargo-build-docker"
version = "0.0.5"
authors = ["Steve <steven@skone.net>"]
repository = "https://github.com/skone/cargo-build-docker"
description = "A cargo subcommand to build rust using docker"
readme = "README.md"
license = "MIT"
keywords    = ["cargo-subcommand", "docker"]
edition     = "2018"

[[bin]]
name = "cargo-build-docker"

[dependencies]
clap = "2.33.0"
